[B]Version 0.1.1[/B]
- Fix loading on Windows

[B]Version 0.1.0[/B]
- Initial version
- Some videos are not working, because the playlist retrieved contains an invalid video file link.[CR]I am investigating